@@ -1,3 +1,8 @@
+2004-01-15  Maxim Dzumanenko <mvd@mylinux.com.ua>
+
+	* actions.c: (mon_edit_actions), (edit_action_entry):
+	* info.c: (RepaintLogInfo): Add some strings for translation.
+
 2003-12-13  Michael Terry  <mterry@fastmail.fm>
 
        * Makefile.am, about.c, gnome-system-log.desktop.in, logview.c: Use
